# llm-zoomcamp-2026-code

./: .gitignore  01-agentic-rag-environment.ipynb  02-08-pgvector.ipynb  02-vector-search-using-sqlitsearch-vector-search-in-RAG.ipynb  02-vector-search.ipynb  HW02-vector-search.ipynb  HW1-agentic-RAG.ipynb  LICENSE  README.md  faq.db  main.py  pyproject.toml
.ipynb_checkpoints/: 01-agentic-rag-environment-checkpoint.ipynb  02-08-pgvector-checkpoint.ipynb  02-vector-search-reopening-the-index-checkpoint.ipynb  sqlite-ingest-checkpoint.ipynb
